fixed nav spacing

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,14 +3,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding-top: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   backdrop-filter: blur(2.5px);
   -webkit-backdrop-filter: blur(4px);
   position: fixed;
   z-index: 2;
 
   @media screen and (min-width: 768px) {
-    padding: 1rem 3rem 1rem 4rem;
+    padding: 1rem 3rem 0rem 4rem;
   }
 }
 
@@ -34,7 +36,7 @@
   justify-content: center;
   align-items: center;
   list-style: none;
-  
+
   li {
     margin: 0 1rem;
     cursor: pointer;
